tests/test_data/gateway-api-bucketrepo/expected/gateway.networking.k8s.io/v1/HTTPRoute/bucketrepo.yaml
# Source: jxboot-helmfile-resources/templates/700-bucketrepo-httpr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bucketrepo
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: http
  - name: shared-gateway
    namespace: infra
    sectionName: web
  hostnames:
  - bucketrepo-jx.mydomain.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: bucketrepo
      port: 80
