tests/test_data/gateway-api-bucketrepo/expected/gateway.networking.k8s.io/v1/HTTPRoute/hook.yaml
# Source: jxboot-helmfile-resources/templates/700-hook-httpr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hook
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - hook-jx.mydomain.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hook
    backendRefs:
    - name: hook
      port: 80
